<resources>
    <string name="app_name">Android</string>

    <string name="index_welcome_word">欢迎使用我的系统</string>

    <string name="button_text_login">登录</string>
    <string name="button_text_more">了解更多</string>
    <string name="forget_password">忘记密码？</string>
    <string name="lawString">《法律条款与隐私政策》</string>
    <string name="username">18510247730</string>
    <string name="password">000000</string>

    <string name="toolbar_title">标题</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">显示昵称</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
