<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- 首页欢迎语 -->
    <TextView
        android:id="@+id/index_top_tv"
        android:text="@string/index_welcome_word"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:paddingTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 账号密码框 -->
    <LinearLayout
        android:id="@+id/index_ll"
        android:layout_marginTop="100dp"
        android:layout_below="@id/index_top_tv"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/index_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/index_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/index_button_login"
        android:layout_marginTop="40dp"
        android:text="@string/button_text_login"
        android:layout_below="@id/index_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/index_button_info"
        android:layout_marginTop="5dp"
        android:text="@string/button_text_more"
        android:layout_below="@id/index_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>