<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Logo -->
    <ImageView
        android:id="@+id/login_logo_iv"
        android:background="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:layout_width="64dp"
        android:layout_height="32dp" />

    <!-- 账号秘密框 -->
    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_below="@id/login_logo_iv"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_username_et"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/login_password_et"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_forget_tv"
        android:text="@string/forget_password"
        android:layout_below="@id/login_ll"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_login_button"
        android:text="@string/button_text_login"
        android:background="@color/colorPrimary"
        android:layout_below="@id/login_forget_tv"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/login_read_law_ll"
        android:layout_below="@id/login_login_button"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="xxxx"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/login_law_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>